import RestClient from '@heptet/rest-client';
jest.mock('@heptet/rest-client');
import makeReducer from "./reducers";
import actionFn from "./actions";
import { EntityPojo } from "./types";
import { Module } from "./Module";
import { AppLogger } from '../../src/AppLogger';
import { createRestClient } from '../../src/testUtils';

const actions = actionFn();

beforeEach((): void => {
// @ts-ignore
//    RestClient.mockClear();
});

test("state", () => {
    const restClient = createRestClient();
    const mod = new Module({ logger: new AppLogger(), restClient });
    const reducer = makeReducer({ module: mod, restClient });
    const entities: EntityPojo[] = [{ name: "foo" }];
    // @ts-ignore
    const state = reducer(undefined, { type: "test" });
    expect(state).toMatchSnapshot();
    const newState = reducer(state, actions.receiveEntities(entities));
    expect(newState).toMatchSnapshot();
});

